# claude-brain

./: .gitignore  .migration-status  ARCHITECTURE.md  INSTALLATION.md  LICENSE  MAP.md  README.md  brain-service.sh  com.bard.brain-mcp-server.plist  config.example.js  config.js  fix-starttime-bug.sh  help_reminder.txt  index.js  index.js.before-restore  main.py  output-filter-esm.js  package-lock.json  package.json  paths.sh  pyproject.toml  start-brain.sh
docs/: API.md
monitor/: server.py  ui.html
obsidian_integration/: __init__.py  brain_analyzer.py  mercury_tracker.py  obsidian_note.py  unified_search.py
scripts/: install.sh  manage.sh  migrate.sh  monitor.sh  test-server.sh  verify.sh
starter-vault/: HOW-TO-USE.md  LICENSE  Quick-Reference.md  README.md
starter-vault/Core-Documents/: Best-Practices.md  Boot-Sequence.md  Brain-Init-Instructions.md  MCP-Tools-Guide.md  System-Overview.md  User-Preferences-Template.md
starter-vault/Daily-Notes/: Template-Daily-Note.md
starter-vault/Implementation-Plans/: Template-Output-Filtering.md
starter-vault/Projects/: Sample-Project-WebAPI.md
starter-vault/Session-Summaries/: Template-Session-Summary.md
tests/: compare-systems.sh  pre-switch-checklist.sh  setup-test-config.sh  test-brain-functions.js  test-parallel.sh  test-suite.sh
