[project]
name = "claude-brain"
version = "1.0.0"
description = "Unified persistent memory system for Claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
monitor = [
    "flask>=3.0.0",
    "watchdog>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python = "3.11"
